--- a/React/TMDB_Demo/package.json
+++ b/React/TMDB_Demo/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.545.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -23,6 +27,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
+    "vite": "^7.1.10"
   }
 }
